[metadata]
name = ironic-teeth-driver
author = Rackspace
author-email = teeth-dev@lists.rackspace.com
summary = Teeth Management System
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
[files]
packages =
    ironic_teeth_driver

[entry_points]
ironic.drivers =
    teeth = ironic_teeth_driver:TeethDriver

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1